Added Custom Middleware to Log Each Request Details or Exception Details.

--- a/JwtAuthenticationDemo/appsettings.json
+++ b/JwtAuthenticationDemo/appsettings.json
@@ -13,5 +13,8 @@
   "Key": "ThisIsASecureSuperSecretKey123456789!",
   "AccessTokenExpiryMinutes": 10,
   "RefreshTokenExpiryDays": 2
+  },
+  "LoggingMiddleware": {
+    "LogFilePath": "Logs/log.txt"
   }
 }
