--- a/JwtAuthenticationDemo/appsettings.json
+++ b/JwtAuthenticationDemo/appsettings.json
@@ -15,6 +15,6 @@
   "RefreshTokenExpiryDays": 2
   },
   "LoggingMiddleware": {
-    "LogFilePath": "Logs/log.txt"
+    "LogFilePath": "C:\\ApplicationLogs\\log.txt"
   }
 }
